added api tests and refactores tests and scripts a lot to make them run in all environments. local is working and next step is docker
